--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "cryptojs": "^2.5.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
